# elyria-rag-source-authority-gate

./: CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: access-scope-and-sensitivity.md  architecture-diagram.md  deployable-sandbox.md  deployment-modes.md  design-language.md  executive-demo-script.md  freshness-and-lifecycle-model.md  grounding-readiness-model.md  production-readiness-checklist.md  rag-evaluation-scorecard.md  retrieval-telemetry-and-auditability.md  source-authority-model.md  source-registry-template.md  visual-index.md
examples/: approved-policy-source.json  changed-corpus-revalidation.json  stale-unknown-owner-source.json  unauthorized-sensitive-source.json
reports/: sample-rag-source-authority-report.md
sandbox/: runner.py
sandbox/outputs/: sample-sandbox-results.json
src/elyria_rag_source_gate/: __init__.py  engine.py  schema.py
tests/: expected-rag-source-outcomes.md
